# mz_pan_zoom_crudest

./: MoonZoon.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: lib.rs  svg.rs  web.rs
frontend/src/web/: pan_z.rs
frontend/src/web/pan_z/: screen_geom.rs  state.rs
public/css/: currentStyle.css
