[package]
version = "0.1.0"
name = "frontend"
edition = "2021"

[lib]
crate-type = ["cdylib"]
[features]
default = ["zoon/panic_hook"]

[dependencies]

zoon = { git = "https://github.com/MoonZoon/MoonZoon", branch = "feat/profiling" }
console_log = { version = "0.2", features = ["wasm-bindgen", "color"] }
log-panics = "2"
fern = "0.6"
log = "0.4"
wasm-bindgen = "0.2"
approx = "0.5"
num-traits = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "CharacterData",
    "Comment",
    "console",
    "CssRule",
    "CssRuleList",
    "CssStyleDeclaration",
    "CssStyleRule",
    "CssStyleSheet",
    "Document",
    "DomTokenList",
    "DomRect",
    "Element",
    "Event", "EventListener",
    "EventTarget",
    "FocusEvent",
    "History",
    "InputEvent",
    "Headers",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlInputElement",
    "HtmlStyleElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "Location",
    "MouseEvent",
    "Node",
    "Performance",
    "ProgressEvent",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Screen",
    "StyleSheet",
    "SvgElement",
    "SvgGraphicsElement",
    "SvgPoint",
    "SvgMatrix",
    "SvgRect",
    "SvgsvgElement",
    "Text",
    "UiEvent",
    'WheelEvent',
    "Window",
]





[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

